Autosmooth feature: erroneously showing hidden vertices' normals too when in "vertex per face" display #39781

Closed
opened 2014-04-18 17:54:29 +02:00 by Gwenael Le Page · 12 comments

Buildbot for Win 64, the standard one, on the 18/04/2014.
Hash 4ed16bc

If you hide some of the vertices of your mesh, you still get to see their normals in this display mode.
Nothing complicated, it is easily reproducible.

I've done some research before, hoping I would not create a double report. I hope it's not the case.

Buildbot for Win 64, the standard one, on the 18/04/2014. Hash 4ed16bc If you hide some of the vertices of your mesh, you still get to see their normals in this display mode. Nothing complicated, it is easily reproducible. I've done some research before, hoping I would not create a double report. I hope it's not the case.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @gwentiv

Added subscriber: @gwentiv
Bastien Montagne self-assigned this 2014-04-18 22:53:12 +02:00

Confirmed, and unfortunately not so easy to fix (will have to add foreachMappedLoop mess in DM, after all :/ ).

Confirmed, and unfortunately not so easy to fix (will have to add foreachMappedLoop mess in DM, after all :/ ).

Sorry to hear that. What do you mean by DM?

By the way, that Autosmooth thingy with the multiple normals per vertex, alongside this enhancement on the .obj I/O (I think that was you ?) is great great great !

Sorry to hear that. What do you mean by DM? By the way, that Autosmooth thingy with the multiple normals per vertex, alongside this enhancement on the .obj I/O (I think that was you ?) is great great great !

Thanks! :)

DM stands for "DerivedMesh", a key C struct in Blender, that’s dev tech speak. ;)

Thanks! :) DM stands for "DerivedMesh", a key C struct in Blender, that’s dev tech speak. ;)

This issue was referenced by 60b015d1fc

This issue was referenced by 60b015d1fc1005fd0eff29272ce5b66f8adb5755

This issue was referenced by dda5678669

This issue was referenced by dda567866924d4d9ce4be56235ec3e1a691492c7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit dda5678669.

Closed by commit dda5678669.

This issue was referenced by blender/blender-addons-contrib@70fdcebb93

This issue was referenced by blender/blender-addons-contrib@70fdcebb93f0984980f7aefd33ac0fafe91f3dfe

This issue was referenced by 70fdcebb93

This issue was referenced by 70fdcebb93f0984980f7aefd33ac0fafe91f3dfe

Sorry for the mess, only last commit is related to this issue... :/

Sorry for the mess, only last commit is related to this issue... :/
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39781
No description provided.